Update project files, excluding temporary drive upload directory

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,4 @@ NOTION_API_KEY=
 
 # Notların, görevlerin ve kodların ekleneceği Notion sayfasının kimliği (ID).
 # Sayfanın URL'sindeki son 32 karakterlik kısımdır.
-# Örnek URL: https://www.notion.so/Kisisel-Notlarim-2be3321a3c0f80f1b4c9c93be7dd3f30 -> ID: 2be3321a3c0f80f1b4c9c93be7dd3f30
-ROOT_PAGE_ID=
+NOTION_PAGE_ID=
