--- a/notion_mcp_v2/requirements.txt
+++ b/notion_mcp_v2/requirements.txt
@@ -1,3 +1,3 @@
 git+https://github.com/modelcontextprotocol/python-sdk.git
-notion-client
-python-dotenv
+notion-client>=2.2.1
+python-dotenv>=1.0.1
